KCoreDirLister: Enable using mime globs

Filters such as "image/*" can be useful and KFileFilter already
lets them pass. In addition it also works when used through the
portal API or through QFileDialog.
BUG:450612